--- a/Aula3/praticandoAula3/praticando1.html
+++ b/Aula3/praticandoAula3/praticando1.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-
+    <a href="index.html">Voltar ao menu principal</a>
     <h1>Quais são os elementos da tabela periódica mais comuns no corpo humano?
     </h1>
 
