--- a/Aula3/trabalhoNoticia/noticia.html
+++ b/Aula3/trabalhoNoticia/noticia.html
@@ -40,6 +40,7 @@
 </head>
 
 <body>
+    <a href="index.html">Voltar ao menu principal</a>
     <div class="container">
         <div class="main">
             <h1>
