--- a/Aula4/4A/index.html
+++ b/Aula4/4A/index.html
@@ -37,6 +37,7 @@
     </header>
 
     <main>
+        <a href="index.html">Voltar ao menu principal</a>
         <!-- Main Content -->
         <div class="container my-5" id="content_container">
             <h1>Menu Principal</h1>
