--- a/Aula4/4B/index.html
+++ b/Aula4/4B/index.html
@@ -41,6 +41,7 @@
     <main>
         <!-- Main Content -->
         <div class="container my-5" id="content_container">
+            <a href="index.html">Voltar ao menu principal</a>
             <h1>Menu Principal</h1>
             <h2>Lucas Dantas</h2>
             <h4>Atividades do dia 24/08/2023</h4>
