--- a/Aula5/Aula5a/index.html
+++ b/Aula5/Aula5a/index.html
@@ -9,6 +9,7 @@
 
 <body>
     <main>
+        <a href="index.html">Voltar ao menu principal</a>
         <h1>Menu Principal</h1>
 
         <h2>Elementos e marcação semântica com HTML</h2>
