Adicao de link menu principal

--- a/Aula6/praticando1.html
+++ b/Aula6/praticando1.html
@@ -10,7 +10,7 @@
 
 <body>
     <main style="margin: 1%;">
-        <a href="index.html">Voltar ao menu principal</a>
+        <a href="/index.html">Voltar ao menu principal</a>
         <h1>Praticando 1 - Cores e planos de fundo</h1>
         <div>
             <h1 style="background-color: #f9e6ff;">Lorem</h1>
